feat: home view, footer & header * dockerfile

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
     --color-background: #2F456F;
     --color-cta: #F29D1D;
     --color-titles: #fff;
-    --color-subTitle: #fff;
+    --color-subTitle: #CCC;
     --color-n-text: #fff;
    
 }
